deployments/templates/docusaurus/trycloudflare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-dev-${APP_NAME}
  namespace: dev
  labels:
    env: dev
    site: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-dev-${APP_NAME}
  template:
    metadata:
      labels:
        app: cloudflared-dev-${APP_NAME}
        env: dev
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args: [tunnel, --no-autoupdate, --url, "http://${APP_NAME}.${NAMESPACE}.svc.cluster.local:3000"]
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
